scripts/inject_db_failure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-app
  template:
    metadata:
      labels:
        app: db-app
    spec:
      containers:
      - name: db
        image: postgres:15
        command:
          - sh
          - -c
          - |
            while true
            do
              psql -U postgres
              sleep 5
            done
