scripts/inject_high_cpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpu-app
  template:
    metadata:
      labels:
        app: cpu-app
    spec:
      containers:
      - name: cpu
        image: busybox
        command:
          - sh
          - -c
          - |
            while true
            do
              yes > /dev/null
            done
