scripts/inject_high_memory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memory-app
  template:
    metadata:
      labels:
        app: memory-app
    spec:
      containers:
      - name: memory
        image: polinux/stress
        args:
          - "--vm"
          - "1"
          - "--vm-bytes"
          - "500M"
