scripts/inject_oom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oom-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oom-app
  template:
    metadata:
      labels:
        app: oom-app
    spec:
      containers:
      - name: oom
        image: polinux/stress
        resources:
          limits:
            memory: "64Mi"
        args:
          - "--vm"
          - "1"
          - "--vm-bytes"
          - "256M"
          - "--vm-hang"
          - "1"
